<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="normal"
        app:maxImageSize="50dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:theme="@style/AppTheme.AppBarOverlay">-->

    <!--        <androidx.appcompat.widget.Toolbar-->
    <!--            android:id="@+id/toolbar"-->
    <!--            app:popupTheme="@style/AppTheme.PopupOverlay"-->
    <!--            app:title="Dashboard"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="?attr/actionBarSize"-->
    <!--            android:background="?attr/colorAccent" />-->

    <!--    </com.google.android.material.appbar.AppBarLayout>-->


    <RelativeLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Dashboard">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome"
                android:gravity="center"
                android:text="Username"
                android:textSize="30sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/listTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout"
            android:layout_marginStart="10dp"
            android:text="@string/contact_list"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newtextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listTitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/no_contacts_added"
            android:textSize="25sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listTitle"
            android:layout_margin="10dp"
            android:backgroundTint="@color/cardview_shadow_end_color">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>


</FrameLayout>